<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue_fon"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rec1"
        android:paddingTop="40dp" />

    <EditText
        android:id="@+id/log"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/log"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="40dp"
        />

    <EditText
        android:id="@+id/pas"
        android:paddingLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/pas"
        android:layout_marginHorizontal="40dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/button_color"
        android:text="@string/text1"
        android:textColor="@color/white"
        />

</LinearLayout>